<resources>
    <string name="app_name">WorkShopRegister</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="apply_for_workshop">apply for workshop</string>
    <string name="firstname">FirstName</string>
    <string name="please_write_your_first_name">please write your first name</string>
    <string name="last_name">Last Name</string>
    <string name="please_write_your_last_name">please write your last name</string>
    <string name="age">Age</string>
    <string name="signup">Signup</string>
    <string name="your_s_applied_workshops">Your\'s applied workshops</string>
    <string name="you_have_not_register_for_any_workshop_yet">you have not register for any workshop yet</string>
    <string name="email">Email</string>
    <string name="no_data_found">No data found please refresh</string>
</resources>