<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.areeb.ui.profile.ProfileFragment">


    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            tools:text="Areeb Ahmad" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            tools:text="areebrockzz786@gmail.com" />

        <TextView
            android:id="@+id/tvUserAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14"
            tools:text="Age 22" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvWorkShopApplied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_40"
        android:text="@string/your_s_applied_workshops"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <RelativeLayout
        android:id="@+id/noDataFound"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        android:layout_marginTop="@dimen/size_10"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkShopApplied">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_not_register_for_any_workshop_yet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApplied"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        android:layout_marginHorizontal="@dimen/font_20"
        android:layout_marginTop="@dimen/size_10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkShopApplied"
        tools:listitem="@layout/home_item" />


</androidx.constraintlayout.widget.ConstraintLayout>